--- a/ImageFeed/Base.lproj/LaunchScreen.storyboard
+++ b/ImageFeed/Base.lproj/LaunchScreen.storyboard
@@ -17,15 +17,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch image" translatesAutoresizingMaskIntoConstraints="NO" id="hNb-El-fxA">
-                                <rect key="frame" x="169.5" y="409" width="75" height="78"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="fRp-i5-bQf">
+                                <rect key="frame" x="170.5" y="410.5" width="73" height="75.5"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
-                            <constraint firstItem="hNb-El-fxA" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cys-qo-VJP"/>
-                            <constraint firstItem="hNb-El-fxA" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="sXL-vH-wKO"/>
+                            <constraint firstItem="fRp-i5-bQf" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Djh-Bc-DKL"/>
+                            <constraint firstItem="fRp-i5-bQf" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="bLG-eG-ta6"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -35,7 +35,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Launch image" width="75" height="78"/>
+        <image name="launch_image" width="73" height="75.5"/>
         <namedColor name="YP Black">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
