--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -83,6 +83,7 @@
                                             <outlet property="favoriteImage" destination="Bd7-da-oi2" id="CSG-7x-uEF"/>
                                             <outlet property="gradientView" destination="0od-pq-oVb" id="oac-c1-i7p"/>
                                             <outlet property="mainImage" destination="oGh-6B-dJq" id="UCd-Dv-WVw"/>
+                                            <segue destination="w21-1Q-AIi" kind="show" id="CmB-GF-odV"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -101,14 +102,45 @@
                             <constraint firstItem="ftS-D7-ty7" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="W4p-oS-Bxs"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="402-JE-6ni"/>
+                    <navigationItem key="navigationItem" id="dBC-dk-5m6"/>
                     <connections>
                         <outlet property="tableView" destination="ftS-D7-ty7" id="VWD-bR-08b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="56.521739130434788" y="-2.6785714285714284"/>
+            <point key="canvasLocation" x="966.66666666666674" y="-2.6785714285714284"/>
+        </scene>
+        <!--Single Image View Controller-->
+        <scene sceneID="iGP-mS-IH9">
+            <objects>
+                <viewController id="w21-1Q-AIi" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xFv-BG-TzP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="f0X-7f-X2f">
+                                <rect key="frame" x="0.0" y="92" width="414" height="721"/>
+                                <color key="backgroundColor" name="YP Black"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="6cH-SF-Rii"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="6cH-SF-Rii" firstAttribute="trailing" secondItem="f0X-7f-X2f" secondAttribute="trailing" id="Pab-mh-Q1Z"/>
+                            <constraint firstItem="f0X-7f-X2f" firstAttribute="top" secondItem="6cH-SF-Rii" secondAttribute="top" id="Sze-eg-0qz"/>
+                            <constraint firstItem="6cH-SF-Rii" firstAttribute="bottom" secondItem="f0X-7f-X2f" secondAttribute="bottom" id="U17-ke-qYq"/>
+                            <constraint firstItem="f0X-7f-X2f" firstAttribute="leading" secondItem="6cH-SF-Rii" secondAttribute="leading" id="ZcG-2y-Wc9"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="jGy-mD-BH2"/>
+                    <connections>
+                        <outlet property="imageView" destination="f0X-7f-X2f" id="CID-uQ-k6t"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7t2-mR-iL1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1875" y="1"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="gKi-W6-6rH">
@@ -240,13 +272,37 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="k7m-gi-GPP"/>
+                        <segue destination="7Ke-cn-jwE" kind="relationship" relationship="viewControllers" id="k7m-gi-GPP"/>
                         <segue destination="Ydk-4t-BCO" kind="relationship" relationship="viewControllers" id="1MC-SB-wPp"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uCZ-GU-TvL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-999" y="349"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="DKF-dN-K2W">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7Ke-cn-jwE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="402-JE-6ni"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NB1-zF-BwE">
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <color key="tintColor" name="YP White"/>
+                        <navigationBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="YP Black"/>
+                        </navigationBarAppearance>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Ftf-Vu-3Vn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OlH-ui-AVQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="56.521739130434788" y="-2.6785714285714284"/>
         </scene>
     </scenes>
     <resources>
